# moebius_project

./: Cargo.toml
src/: geo.rs  lib.rs  mobius.rs  process.rs
tests/: una_placa.rs
