[package]
name = "mobius_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "*"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
num-traits = "0.2.17"
geo = "0.28.0"
geojson = "0.24.1"
serde = "*"
itertools = "*"
